[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="RoundLabel" type="Label" parent="."]
margin_left = 26.0
margin_top = 26.0
margin_right = 74.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -339, 26 )
text = "Round: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonHP" type="ProgressBar" parent="."]
margin_left = 128.0
margin_top = 96.0
margin_right = 320.0
margin_bottom = 110.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="MonHP"]
margin_left = 72.0
margin_right = 112.0
margin_bottom = 14.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroHP" type="ProgressBar" parent="."]
margin_left = 128.0
margin_top = 384.0
margin_right = 320.0
margin_bottom = 398.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="HeroHP"]
margin_left = 72.0
margin_right = 120.0
margin_bottom = 14.0
align = 1

[node name="StrLabel" type="Label" parent="."]
margin_left = 128.0
margin_top = 408.0
margin_right = 189.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 104, 40 )
text = "Strength: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefLabel" type="Label" parent="."]
margin_left = 128.0
margin_top = 432.0
margin_right = 189.0
margin_bottom = 446.0
rect_pivot_offset = Vector2( 104, 40 )
text = "Defence: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtkButton" type="Button" parent="."]
margin_left = 168.0
margin_top = 352.0
margin_right = 280.0
margin_bottom = 376.0
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootContainer" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 304.0
margin_right = 320.0
margin_bottom = 344.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LootContainer"]
margin_right = 192.0
margin_bottom = 14.0
text = "Pick one:"
align = 1

[node name="LootContainer" type="HBoxContainer" parent="LootContainer"]
margin_top = 18.0
margin_right = 192.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonH" type="Button" parent="LootContainer/LootContainer"]
margin_right = 61.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -472, -24 )
size_flags_horizontal = 3
text = "+1 HP"

[node name="ButtonD" type="Button" parent="LootContainer/LootContainer"]
margin_left = 65.0
margin_right = 126.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -472, -24 )
size_flags_horizontal = 3
text = "+1 Def"

[node name="ButtonS" type="Button" parent="LootContainer/LootContainer"]
margin_left = 130.0
margin_right = 192.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -472, -24 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+1 Str"
[connection signal="pressed" from="AtkButton" to="." method="_on_AtkButton_pressed"]
[connection signal="pressed" from="LootContainer/LootContainer/ButtonH" to="." method="_on_ButtonH_pressed"]
[connection signal="pressed" from="LootContainer/LootContainer/ButtonD" to="." method="_on_ButtonD_pressed"]
[connection signal="pressed" from="LootContainer/LootContainer/ButtonS" to="." method="_on_ButtonS_pressed"]
